[gd_scene load_steps=18 format=2]

[ext_resource path="res://BikeMenu/BikeUpgradeDialog.gd" type="Script" id=1]
[ext_resource path="res://BikeMenu/assets/plus.png" type="Texture" id=2]
[ext_resource path="res://BikeMenu/assets/minus.png" type="Texture" id=3]
[ext_resource path="res://Game/GUI/counter/RMCounter.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game/GUI/assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://BikeMenu/assets/yes.png" type="Texture" id=6]
[ext_resource path="res://BikeMenu/assets/no.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=10]
size = 40
font_data = ExtResource( 5 )

[node name="BikeUpgradeDialog" type="PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RMCounter" parent="." instance=ExtResource( 4 )]
margin_left = 1204.1
margin_top = 53.2379
margin_right = 1304.1
margin_bottom = 93.2379

[node name="Container" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -334.529
margin_top = 87.6812
margin_right = 368.471
margin_bottom = 583.681
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
margin_right = 739.0
margin_bottom = 496.0
rect_min_size = Vector2( 700, 400 )

[node name="Title" type="Label" parent="Container/VBoxContainer"]
margin_right = 739.0
margin_bottom = 80.0
rect_min_size = Vector2( 520, 80 )
custom_fonts/font = SubResource( 1 )
text = "Upgrade bike"
uppercase = true
percent_visible = -0.0909091

[node name="GridContainer" type="GridContainer" parent="Container/VBoxContainer"]
margin_top = 84.0
margin_right = 739.0
margin_bottom = 484.0
rect_min_size = Vector2( 460, 400 )
columns = 4

[node name="PowerLabel" type="Label" parent="Container/VBoxContainer/GridContainer"]
margin_top = 32.0
margin_right = 187.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 2 )
text = "Max power: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerValue" type="Label" parent="Container/VBoxContainer/GridContainer"]
margin_left = 191.0
margin_top = 32.0
margin_right = 291.0
margin_bottom = 67.0
rect_min_size = Vector2( 100, 35 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1

[node name="PowerAdded" type="Label" parent="Container/VBoxContainer/GridContainer"]
margin_left = 295.0
margin_top = 27.0
margin_right = 395.0
margin_bottom = 73.0
rect_min_size = Vector2( 100, 35 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="PowerButtons" type="VBoxContainer" parent="Container/VBoxContainer/GridContainer"]
margin_left = 399.0
margin_right = 739.0
margin_bottom = 100.0
rect_min_size = Vector2( 340, 100 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_power_add" type="TouchScreenButton" parent="Container/VBoxContainer/GridContainer/PowerButtons"]
position = Vector2( 70, 14 )
scale = Vector2( 0.6, 0.6 )
normal = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="btn_power_del" type="TouchScreenButton" parent="Container/VBoxContainer/GridContainer/PowerButtons"]
position = Vector2( 188, 14 )
scale = Vector2( 0.6, 0.6 )
normal = ExtResource( 3 )

[node name="SpeedLabel" type="Label" parent="Container/VBoxContainer/GridContainer"]
margin_top = 136.0
margin_right = 187.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 5 )
text = "Max speed: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedValue" type="Label" parent="Container/VBoxContainer/GridContainer"]
margin_left = 191.0
margin_top = 136.0
margin_right = 291.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1

[node name="SpeedAdded" type="Label" parent="Container/VBoxContainer/GridContainer"]
margin_left = 295.0
margin_top = 131.0
margin_right = 395.0
margin_bottom = 177.0
custom_fonts/font = SubResource( 7 )
text = "0"
align = 1

[node name="SpeedButtons" type="VBoxContainer" parent="Container/VBoxContainer/GridContainer"]
margin_left = 399.0
margin_top = 104.0
margin_right = 739.0
margin_bottom = 204.0
rect_min_size = Vector2( 180, 100 )
alignment = 1

[node name="btn_speed_add" type="TouchScreenButton" parent="Container/VBoxContainer/GridContainer/SpeedButtons"]
position = Vector2( 70, 14 )
scale = Vector2( 0.6, 0.6 )
normal = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="btn_speed_del" type="TouchScreenButton" parent="Container/VBoxContainer/GridContainer/SpeedButtons"]
position = Vector2( 188, 14 )
scale = Vector2( 0.6, 0.6 )
normal = ExtResource( 3 )

[node name="JumpLabel" type="Label" parent="Container/VBoxContainer/GridContainer"]
margin_top = 240.0
margin_right = 187.0
margin_bottom = 275.0
custom_fonts/font = SubResource( 8 )
text = "Max jump: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JumpValue" type="Label" parent="Container/VBoxContainer/GridContainer"]
margin_left = 191.0
margin_top = 240.0
margin_right = 291.0
margin_bottom = 275.0
custom_fonts/font = SubResource( 9 )
text = "0"
align = 1

[node name="JumpAdded" type="Label" parent="Container/VBoxContainer/GridContainer"]
margin_left = 295.0
margin_top = 235.0
margin_right = 395.0
margin_bottom = 281.0
custom_fonts/font = SubResource( 10 )
text = "0"
align = 1

[node name="JumpButtons" type="VBoxContainer" parent="Container/VBoxContainer/GridContainer"]
margin_left = 399.0
margin_top = 208.0
margin_right = 739.0
margin_bottom = 308.0
rect_min_size = Vector2( 180, 100 )
alignment = 1

[node name="btn_jump_add" type="TouchScreenButton" parent="Container/VBoxContainer/GridContainer/JumpButtons"]
position = Vector2( 70, 14 )
scale = Vector2( 0.6, 0.6 )
normal = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="btn_jump_del" type="TouchScreenButton" parent="Container/VBoxContainer/GridContainer/JumpButtons"]
position = Vector2( 188, 14 )
scale = Vector2( 0.6, 0.6 )
normal = ExtResource( 3 )

[node name="ButtonContainer" type="HBoxContainer" parent="Container"]
margin_right = 739.0
margin_bottom = 496.0

[node name="btn_yes" type="TouchScreenButton" parent="Container/ButtonContainer"]
position = Vector2( 790.173, 429.851 )
scale = Vector2( 0.22, 0.22 )
normal = ExtResource( 6 )

[node name="btn_no" type="TouchScreenButton" parent="Container/ButtonContainer"]
position = Vector2( -329.405, 473.169 )
scale = Vector2( 0.18, 0.18 )
normal = ExtResource( 7 )

[connection signal="pressed" from="Container/VBoxContainer/GridContainer/PowerButtons/btn_power_add" to="." method="_on_btn_power_add_pressed"]
[connection signal="released" from="Container/VBoxContainer/GridContainer/PowerButtons/btn_power_add" to="." method="_on_btn_power_add_released"]
[connection signal="pressed" from="Container/VBoxContainer/GridContainer/PowerButtons/btn_power_del" to="." method="_on_btn_power_del_pressed"]
[connection signal="released" from="Container/VBoxContainer/GridContainer/PowerButtons/btn_power_del" to="." method="_on_btn_power_del_released"]
[connection signal="pressed" from="Container/VBoxContainer/GridContainer/SpeedButtons/btn_speed_add" to="." method="_on_btn_speed_add_pressed"]
[connection signal="released" from="Container/VBoxContainer/GridContainer/SpeedButtons/btn_speed_add" to="." method="_on_btn_speed_add_released"]
[connection signal="pressed" from="Container/VBoxContainer/GridContainer/SpeedButtons/btn_speed_del" to="." method="_on_btn_speed_del_pressed"]
[connection signal="released" from="Container/VBoxContainer/GridContainer/SpeedButtons/btn_speed_del" to="." method="_on_btn_speed_del_released"]
[connection signal="pressed" from="Container/VBoxContainer/GridContainer/JumpButtons/btn_jump_add" to="." method="_on_btn_jump_add_pressed"]
[connection signal="released" from="Container/VBoxContainer/GridContainer/JumpButtons/btn_jump_add" to="." method="_on_btn_jump_add_released"]
[connection signal="pressed" from="Container/VBoxContainer/GridContainer/JumpButtons/btn_jump_del" to="." method="_on_btn_jump_del_pressed"]
[connection signal="released" from="Container/VBoxContainer/GridContainer/JumpButtons/btn_jump_del" to="." method="_on_btn_jump_del_released"]
